--- a/Commons/main/project.properties
+++ b/Commons/main/project.properties
@@ -15,3 +15,5 @@ target=android-16
 android.library=true
 
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+android.library.reference.1=../actionbarsherlock
+android.library.reference.2=../SlidingMenu
