--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -151,7 +151,8 @@
         <service android:name="com.xtify.sdk.alarm.LocationIntentService" />
 		
 		<!--  End Xtify Setup -->
-        <activity android:name=".push.PushManageFragment"></activity>
+        <activity android:name=".push.PushManageFragment">
+        </activity>
         <activity android:name=".push.PushTermsAndConditionsActivity"></activity>
         <activity android:name=".navigation.NavigationRootActivity"></activity>
     </application>
