--- a/Commons/main/pom.xml
+++ b/Commons/main/pom.xml
@@ -21,11 +21,21 @@
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>android.support</groupId>
+			<artifactId>compatibility-v13</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.actionbarsherlock</groupId>
 			<artifactId>actionbarsherlock</artifactId>
 			<type>apklib</type>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.android</groupId>
+					<artifactId>support-v4</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.slidingmenu.lib</groupId>
@@ -58,6 +68,11 @@
 			<groupId>lib</groupId>
 			<artifactId>admsAppLibrary</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>lib</groupId>
+			<artifactId>xtify-android-sdk</artifactId>
+			<version>2.2.2.4</version>
 		</dependency>
 	</dependencies>
 	
