--- a/Phone/main/pom.xml
+++ b/Phone/main/pom.xml
@@ -21,6 +21,10 @@
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>android.support</groupId>
+			<artifactId>compatibility-v13</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.discover.mobile</groupId>
@@ -36,6 +40,12 @@
 			<groupId>com.actionbarsherlock</groupId>
 			<artifactId>actionbarsherlock</artifactId>
 			<type>apklib</type>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.android</groupId>
+					<artifactId>support-v4</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -58,20 +68,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	<!-- <repositories>
-		<repository>
-			<id>lib</id>
-			<name>lib</name>
-			<releases>
-				<enabled>true</enabled>
-				<checksumPolicy>ignore</checksumPolicy>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<url>file://${project.basedir}/../../Libraries/maven</url>
-		</repository>
-	</repositories> -->
 	
 </project>
