--- a/Phone/main/project.properties
+++ b/Phone/main/project.properties
@@ -12,4 +12,6 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-android.library.reference.1=../../Commons/main
+android.library.reference.1=../../Libraries/JakeWharton-ActionBarSherlock-4.2.0/library
+android.library.reference.2=../../Commons/main
+android.library.reference.3=../../Libraries/jfeinstein10-SlidingMenu-c3a47530d6/library
