--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -39,7 +39,18 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		
+	
+<!--TODO: Put this back		
+		<activity android:name=".login.register.StrengthBarHelpActivity"
+		    android:label="@string/app_name"
+			android:theme="@style/AppTheme"
+			android:windowSoftInputMode="adjustPan">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+-->	
 		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
@@ -76,11 +87,12 @@
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
 			android:noHistory="true" />
-		
+<!--TODO: Put this back	-->	
 		<activity android:name=".login.register.StrengthBarHelpActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="portrait" />
+
 		
 		<activity android:name=".login.register.ForgotTypeSelectionActivity"
 			android:label="@string/app_name"
