--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    
+	<uses-permission android:name="android.permission.VIBRATE"/>   
 	
 	<application android:name=".DiscoverApplication"
 		android:icon="@drawable/discove_mobile_icn"
@@ -115,7 +115,7 @@
             </intent-filter>
         </receiver>
         
-        <receiver android:name=".common.push.XtifyNotifier">
+        <receiver android:name="com.discover.mobile.push.receive.XtifyNotifier">
             <intent-filter>
                 <action android:name="com.xtify.sdk.NOTIFIER" />
             </intent-filter>
