--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     
 	
 	<application android:name=".DiscoverApplication"
@@ -53,8 +54,8 @@
 		
 		<activity android:name=".login.register.RegistrationAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:screenOrientation="portrait" />
+			android:launchMode="standard">
+		</activity>
 	
 		<activity android:name=".login.register.ForgotPasswordAccountInformationActivity"
 			android:label="@string/app_name"
