--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>   
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    
 	
 	<application android:name=".DiscoverApplication"
 		android:icon="@drawable/discove_mobile_icn"
