--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -79,8 +79,7 @@
 
 		<activity android:name=".login.register.StrengthBarHelpActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait" />
+			android:launchMode="singleTask" />
 	
 		<activity android:name=".login.register.ForgotTypeSelectionActivity"
 			android:label="@string/app_name"
