--- a/Commons/main/pom.xml
+++ b/Commons/main/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<artifactId>Discover-Android-Commons</artifactId>
 	<packaging>apklib</packaging>
-	
+
 	<name>Discover: Android - Commons</name>
-	
+
 	<parent>
 		<groupId>com.discover.mobile</groupId>
 		<artifactId>Discover-Android</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
@@ -25,7 +25,7 @@
 			<groupId>android.support</groupId>
 			<artifactId>compatibility-v13</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.actionbarsherlock</groupId>
 			<artifactId>actionbarsherlock</artifactId>
@@ -42,7 +42,7 @@
 			<artifactId>SlidingMenu</artifactId>
 			<type>apklib</type>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.roboguice</groupId>
 			<artifactId>roboguice</artifactId>
@@ -63,7 +63,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>lib</groupId>
 			<artifactId>admsAppLibrary</artifactId>
@@ -74,11 +74,16 @@
 			<artifactId>xtify-android-sdk</artifactId>
 			<version>2.2.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.acra</groupId>
+			<artifactId>acra</artifactId>
+			<version>4.3.0</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
-        <sourceDirectory>src</sourceDirectory>
-        
+		<sourceDirectory>src</sourceDirectory>
+
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -86,7 +91,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<repositories>
 		<repository>
 			<id>lib</id>
@@ -101,5 +106,5 @@
 			<url>file://${project.basedir}/../../Libraries/maven</url>
 		</repository>
 	</repositories>
-	
+
 </project>
