--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -87,19 +87,21 @@
 		<activity android:name=".login.register.ForgotTypeSelectionActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
-			android:screenOrientation="portrait"
 			android:noHistory="true" />
 		
 		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
-			android:screenOrientation="portrait"
 			android:noHistory="true" />
 		
 		<activity android:name=".login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTop"
-			android:screenOrientation="portrait" />
+			android:launchMode="singleTop" />
+		
+		<activity android:name=".help.CustomerServiceContactsActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop" >
+		</activity>
 	
 		<activity android:name=".navigation.NavigationMenuRootActivity" />
 		
