--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -71,8 +71,8 @@
 		
 		<activity android:name=".login.register.CreateLoginActivity"
 			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:screenOrientation="portrait" />
+			android:launchMode="standard" >
+			</activity>
 		
 		<activity android:name=".login.register.AccountInformationConfirmationActivity"
 			android:label="@string/app_name"
