--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -86,8 +86,8 @@
 	
 		<activity android:name=".login.register.ForgotTypeSelectionActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:noHistory="true" />
+			android:launchMode="singleTask">
+		</activity>
 		
 		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
