--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -84,7 +84,7 @@
 			android:label="@string/app_name"
 			android:launchMode="singleTask" />
 	
-		<activity android:name=".login.register.ForgotTypeSelectionActivity"
+		<activity android:name="com.discover.mobile.login.register.ForgotCredentialsActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask">
 		</activity>
