--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 	
 		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
-			android:launchMode="standard"
+			android:launchMode="singleTop"
 			android:screenOrientation="portrait"
 			android:noHistory="true" />
 		
