--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -91,8 +91,7 @@
 		
 		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:noHistory="true" />
+			android:launchMode="singleTask" />
 		
 		<activity android:name=".login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
