--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoTitleBar"
 			android:windowSoftInputMode="adjustPan">
-			<intent-filter>
+		    <intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
@@ -61,8 +61,8 @@
 	
 		<activity android:name=".login.register.ForgotPasswordAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:screenOrientation="portrait" />
+			android:launchMode="standard" >
+		</activity>
 	
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
@@ -91,7 +91,8 @@
 		
 		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask" />
+			android:launchMode="singleTask" >
+		</activity>
 		
 		<activity android:name=".login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
