--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 		<activity android:name=".login.LoginActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoTitleBar"
+			android:launchMode="singleTask"
 			android:windowSoftInputMode="adjustPan">
 		    <intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -66,8 +67,7 @@
 	
 		<activity android:name=".login.register.ForgotBothAccountInformationActivity"
 			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:screenOrientation="portrait" />
+			android:launchMode="standard" />
 		
 		<activity android:name=".login.register.CreateLoginActivity"
 			android:label="@string/app_name"
