--- a/Phone/main/AndroidManifest.xml
+++ b/Phone/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoTitleBar"
 			android:windowSoftInputMode="adjustPan">
-		    <intent-filter>
+			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
@@ -45,9 +45,9 @@
 	
 		<activity android:name=".security.EnhancedAccountSecurityActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTop"
-			android:screenOrientation="portrait"
-			android:noHistory="true" />
+			android:launchMode="standard">
+
+			</activity>
 		
 		<activity android:name=".login.LockOutUserActivity"
 			android:label="@string/app_name"
@@ -57,6 +57,7 @@
 		<activity android:name=".login.register.RegistrationAccountInformationActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard">
+
 		</activity>
 	
 		<activity android:name=".login.register.ForgotPasswordAccountInformationActivity"
@@ -71,35 +72,35 @@
 		<activity android:name=".login.register.CreateLoginActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard" >
+			
 			</activity>
 		
 		<activity android:name=".login.register.AccountInformationConfirmationActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait"
-			android:noHistory="true" />
+			android:launchMode="standard" />
 
 		<activity android:name=".login.register.StrengthBarHelpActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask" />
+			android:launchMode="standard" />
 	
 		<activity android:name="com.discover.mobile.login.register.ForgotCredentialsActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask">
+			android:launchMode="standard">
 		</activity>
 		
 		<activity android:name=".login.register.ForgotUserIdActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTask" >
+			android:launchMode="standard" >
 		</activity>
 		
 		<activity android:name=".login.register.EnterNewPasswordActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTop" />
+			android:launchMode="standard" >
+		</activity>
 		
 		<activity android:name=".help.CustomerServiceContactsActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTop" >
+			android:launchMode="standard" >
 		</activity>
 	
 		<activity android:name=".navigation.NavigationMenuRootActivity" />
